[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/mesa.png" type="Texture" id=1]
[ext_resource path="res://assets/styles/tema.tres" type="Theme" id=2]
[ext_resource path="res://scenes/tangram/paralelogramo_vazio.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/tangram/tri_2.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/tangram/quad.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/tangram/tri_2_vazio.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/tangram/tri_1_vazio.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tangram/paralelogramo.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/tangram/quad_vazio.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/tangram/tri_1.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/tangram/win_screens/peixe/algas.png" type="Texture" id=11]
[ext_resource path="res://assets/tangram/win_screens/peixe/peixe.png" type="Texture" id=12]
[ext_resource path="res://assets/tangram/win_screens/peixe/background.png" type="Texture" id=13]
[ext_resource path="res://scripts/tangram/peixe-loop.gd" type="Script" id=14]
[ext_resource path="res://assets/styles/new_theme.tres" type="Theme" id=15]
[ext_resource path="res://assets/grid-background.png" type="Texture" id=16]

[node name="Node2D" type="Node2D"]
visible = false
script = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.996078, 0.898039, 0.705882, 1 )

[node name="grid" type="Sprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.117647 )
position = Vector2( 648, 376 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 0, 0, 1296, 752 )

[node name="Mesa" type="Sprite" parent="CanvasLayer"]
position = Vector2( 64, 384 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Mesa2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1216, 384 )
rotation = 1.5708
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -411.5
margin_top = -23.0
margin_right = 411.5
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Encaixe as peças para formar a figura!"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Area2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 576, 288 )

[node name="Area2D2" parent="." instance=ExtResource( 6 )]
position = Vector2( 576, 416 )
rotation = -1.5708

[node name="Area2D3" parent="." instance=ExtResource( 7 )]
position = Vector2( 672, 320 )

[node name="Area2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( 672, 384 )
scale = Vector2( 0.667, 0.667 )

[node name="Area2D5" parent="." instance=ExtResource( 9 )]
position = Vector2( 736, 352 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D6" parent="." instance=ExtResource( 6 )]
position = Vector2( 736, 288 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D7" parent="." instance=ExtResource( 6 )]
position = Vector2( 736, 416 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )

[node name="Area2D8" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 112 )

[node name="Area2D9" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 624 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D10" parent="." instance=ExtResource( 8 )]
position = Vector2( 64, 384 )
scale = Vector2( 0.667, 0.667 )

[node name="Area2D11" parent="." instance=ExtResource( 4 )]
position = Vector2( 1200, 96 )
rotation = -1.5708

[node name="Area2D12" parent="." instance=ExtResource( 10 )]
position = Vector2( 1216, 289 )

[node name="Area2D13" parent="." instance=ExtResource( 4 )]
position = Vector2( 1200, 496 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )

[node name="Area2D14" parent="." instance=ExtResource( 4 )]
position = Vector2( 1200, 656 )
scale = Vector2( 0.5, 0.5 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 640, 240 )
texture = ExtResource( 13 )

[node name="Algas" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 256, 576 )
scale = Vector2( 0.599999, 0.599999 )
texture = ExtResource( 11 )

[node name="Algas2" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 1056, 592 )
rotation = -0.261799
scale = Vector2( -0.72, 0.72 )
texture = ExtResource( 11 )

[node name="Peixe" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 624, 336 )
scale = Vector2( 0.599999, 0.599999 )
texture = ExtResource( 12 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="CanvasLayer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = 216.0
margin_right = 384.0
margin_bottom = 262.0
theme = ExtResource( 2 )
text = "Parabéns! Você completou a figura!"
align = 1

[node name="Button" type="Button" parent="CanvasLayer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 263.0
margin_right = 160.0
margin_bottom = 335.0
theme = ExtResource( 15 )
text = "Menu Inicial"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer3/Button" to="." method="_on_Button_pressed"]
